WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167689
HTMLMediaElement.h fails to build when ENABLE(MEDIA_CONTROLS_SCRIPT) is false
https://bugs.webkit.org/show_bug.cgi?id=167689
Summary
HTMLMediaElement.h fails to build when ENABLE(MEDIA_CONTROLS_SCRIPT) is false
Timothy Hatcher
Reported
2017-02-01 08:35:28 PST
mediaControlsHost() can't find m_mediaControlsHost because m_mediaControlsHost is behind the build flag. Move mediaControlsHost() behind the same flag.
Attachments
Patch
(1.44 KB, patch)
2017-02-01 08:57 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2017-02-01 08:57:55 PST
Created
attachment 300327
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-01 09:38:28 PST
Comment on
attachment 300327
[details]
Patch Clearing flags on attachment: 300327 Committed
r211487
: <
http://trac.webkit.org/changeset/211487
>
WebKit Commit Bot
Comment 3
2017-02-01 09:38:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug