HTMLMediaElement.h fails to build when ENABLE(MEDIA_CONTROLS_SCRIPT) is false https://bugs.webkit.org/show_bug.cgi?id=167689

Reviewed by Joseph Pecoraro.

* html/HTMLMediaElement.h: Move mediaControlsHost() into the ENABLE(MEDIA_CONTROLS_SCRIPT)
block that is just above it to match m_mediaControlsHost.


Canonical link: https://commits.webkit.org/184726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211487 268f45cc-cd09-0410-ab3c-d52691b4dbfc